--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1 id="title">Welcome!</h1>
-<img id="animal" src="https://images.unsplash.com/photo-1595433707802-6b2626ef1c91" alt="A cute kitten">
+<img id="animal" src="Images/Olimar.png" alt="A cute kitten">
 
 <button onclick="showCat()">Show Cat</button>
 <button onclick="showDog()">Show Dog</button>
