--- a/index.html
+++ b/index.html
@@ -7,11 +7,39 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 id="title">Welcome!</h1>
+<!-- Task 1
+<h1 id="title">Welcome!</h1>
 <img id="animal" src="Images/Olimar.png" alt="A cute kitten">
 
 <button onclick="showCat()">Show Cat</button>
 <button onclick="showDog()">Show Dog</button>
+-->
+
+<!-- Task 2
+<h2>My Shopping List</h2>
+<ul id="shopping-list">
+  <li>Bread</li>
+  <li>Milk</li>
+</ul>
+
+<button onclick="addItem()">Add Item</button>
+-->
+
+<!-- Task 3
+<h2>Event Object Demo</h2>
+
+<a id="myLink" href="https://google.com">Go to Google</a>
+<br><br>
+<button id="myBtn">Click Me</button>
+-->
+
+<!-- Task 4 
+<h2>Enter Your Name</h2>
+<input id="firstName" type="text" placeholder="Type your name here">
+<button id="greetBtn">Say Hello</button>
+<p id="output"></p>
+-->
+
 <script src="script.js"></script>
 </body>
 </html>
